# pano-yawfix

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  Taskfile.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-and-release.yml  build-linux.yml  build-windows.yml
cmake/: mingw-w64-toolchain.cmake
include/: progress_reporter.h  temp_utils.h  version.h.in  yaw_correction_set.h  yawfix.h
include/cpu/: yaw_corrector.h
include/opencl/: context.h  yaw_corrector.h
include/y4m/: frame.h  parser.h  y4m_types.h
misc/: opencl_check.cpp
scripts/: generate_opencl_importlib.sh  tag_and_push.sh
src/: main.cpp  progress_reporter.cpp  yaw_correction_set.cpp  yawfix.cpp
src/cpu/: yaw_corrector.cpp  yaw_corrector_jpeg.cpp  yaw_corrector_mpeg2.cpp
src/opencl/: context.cpp  yaw_corrector.cpp  yaw_corrector_jpeg.cpp  yaw_corrector_mpeg2.cpp
src/y4m/: frame.cpp  parser.cpp
tests/: test_yawfix.cpp
tests/cpu/: test_yaw_corrector.cpp  test_yaw_corrector_jpeg.cpp  test_yaw_corrector_mpeg2.cpp
tests/opencl/: test_context.cpp  test_yaw_corrector.cpp  test_yaw_corrector_jpeg.cpp  test_yaw_corrector_mpeg2.cpp
tests/y4m/: test_frame.cpp  test_parser.cpp
